--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header"></header>
+
+    <section class="events">
+      <div class="container">
+        <div class="events__title title">
+          Актуальні події
+        </div>
+        <div class="events__item">
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item-des--1-7">
+              <div class="events__img--container">
+                <img
+                  class="events__img"
+                  src="images/events/1.jpg"
+                  alt="NA MU event photo"
+                >
+              </div>
+            </div>
+            <div class="grid__item grid__item-des--9-12">
+              <div class="events__row row">
+                <h3 class="events__type">ВИСТАВКА</h3>
+                <h3 class="events__date">26.08-29.11.2019</h3>
+              </div>
+              <div class="events__subtitle  subtitle">
+                Йду і повертаюсь
+              </div>
+              <div class="events__text">
+                Національний Художній Музей України
+                презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__item">
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item-des--1-7">
+              <div class="events__img--container">
+                <img
+                  class="events__img"
+                  src="images/events/2.png"
+                  alt="NA MU event photo"
+                >
+              </div>
+            </div>
+            <div class="grid__item grid__item-des--9-12">
+              <div class="events__row row">
+                <h3 class="events__type">ВИСТАВКА</h3>
+                <h3 class="events__date">26.08-29.11.2019</h3>
+              </div>
+              <div class="events__subtitle subtitle">
+                І спогади і мрії
+              </div>
+              <div class="events__text">
+                Національний художній музей України до 100 річчя
+                від дня народження   видатної української художниці
+                Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <section class="lesson">
+      <div class="container">
+        <div class="lesson__column">
+          <div class="lesson__body">
+            <div class="lesson__row row">
+              <h3 class="events__type">ЛЕКЦІЯ</h3>
+              <h3 class="events__date">26/08/2019 - 11:00</h3>
+            </div>
+            <div class="lesson__title subtitle">
+              Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="gallery">
+      <div class="container">
+        <div class="events__title title">
+
+        </div>
+      </div>
+    </section>
+    <section class="subscribe"></section>
+
+    <footer class="footer">
+      <div class="container">
+
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
