--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <a href="https://maxxnikiforov.github.io/Museum/" class="logo">
               <img
                 class="logo__img"
-                src="./images/logo.png"
+                src="./images/logo-svg.svg"
                 alt="Natsionalnij hudozhnij muzej Ukrayini Kiyiv"
               >
             </a>
@@ -39,7 +39,9 @@
           </h1>
 
           <div class="header__tickets">
-            <p class="header__tickets-text">КВИТКИ</p>
+            <a href="#contacts" class="header__tickets-button">
+              <p class="header__tickets-button-text">КВИТКИ</p>
+            </a>
             <a href="#contacts" class="header__tickets-link"></a>
           </div>
         </div>
@@ -114,7 +116,11 @@
             <p class="lecture__date-type">ЛЕКЦІЯ</p>
             <p class="lecture__date-time">26/08/2019 - 11:00</p>
           </div>
-          <p class="lecture__name">Від класицизму до романтизму</p>
+          <p class="lecture__name">
+            Від класицизму до
+            <br>
+             романтизму
+          </p>
         </div>
       </section>
 
@@ -207,7 +213,7 @@
           <a href="https://maxxnikiforov.github.io/Museum/">
             <img
               class="logo-M"
-              src="./images/logo.png"
+              src="./images/logo-svg.svg"
               alt="Natsionalnij hudozhnij muzej Ukrayini Kiyiv"
             >
           </a>
@@ -245,6 +251,7 @@
 
           <p class="footer__schedule-info">
             Вихідні понеділок, вівторок
+            <br>
             Каса припиняє роботу за 1 годину
             до закриття музею
           </p>
@@ -252,7 +259,7 @@
 
         <div class="footer__contacts-box">
           <p class="footer__contacts-title" id="contacts">Контакти:</p>
-          
+
           <a
             href="https://goo.gl/maps/vdBMNaCQFfogpEpP8"
             class="footer__contacts-info-link"
