--- a/src/index.html
+++ b/src/index.html
@@ -164,16 +164,18 @@
             <p class="subscription__text grid__item grid__item--4-9">Бути в курсі всіх актуальних подій та останніх новин.</p>
           </div>
 
-          <label for="input">
-            <input
-              type="email"
-              class="subscription__input grid__item grid__item--4-8"
-              id="input"
-              name="input"
-              placeholder="E-mail"
-              required
-            >
-          </label>
+          <form action="get" class="subscription__form  grid__item grid__item--4-8">
+            <label for="input">
+              <input
+                type="email"
+                class="subscription__input"
+                id="input"
+                name="input"
+                placeholder="E-mail"
+                required
+              >
+            </label>
+          </form>
           <a href="#" class="subscription__button grid__item grid__item--9-9">
             <img src="./images/btn.png" alt="btn" class="subscription__img subscrioption__img--btn">
 
