--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,46 @@
     >
   </head>
   <body class="page__body">
-    <header class="header"></header>
+
+    <header class="header">
+      <div class="header__bg">
+        <div class="header__row">
+          <a class="header__menu menu-phone menu">
+            <img
+              class="header__menu-icon"
+              src="images/icons/menu.png"
+              alt="menu">
+          </a>
+          <a class="header__logo">
+            NA<br>MU
+          </a>
+          <div class="header__zaglushka">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="header__body">
+
+          <a class="header__menu menu-desktop menu">
+            <img
+              class="header__menu-icon"
+              src="images/icons/menu.png"
+              alt="menu">
+          </a>
+
+          <h3 class="header__title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h3>
+          <div class="header__btn">
+            <a href="#" class="header__link">Квитки</a>
+            <a href="#" class="header__arrow"></a>
+          </div>
+          <div class="header__events">
+            <a href="#" class="header__events-link">Події</a>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <section class="events">
       <div class="container">
@@ -94,13 +133,16 @@
         </div>
       </div>
     </section>
+
     <section class="gallery">
       <div class="container">
         <div class="events__title title">
           Галерея
         </div>
+
       </div>
     </section>
+
     <section class="subscribe">
       <div class="container">
         <div class="subscribe__body">
@@ -128,101 +170,101 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__body">
-            <div class="footer__top-row">
-              <h3 class="footer__title">NA<br>MU</h3>
-              <div class="footer__icons">
-                <a
-                  class="footer__icons-link"
-                  target="_blank"
-                  href="https://www.facebook.com/"
+          <div class="footer__top-row">
+            <h3 class="footer__title">NA<br>MU</h3>
+            <div class="footer__icons">
+              <a
+                class="footer__icons-link"
+                target="_blank"
+                href="https://www.facebook.com/"
+              >
+                <img
+                  src="images/icons/Facebook.png"
+                  alt="facebook"
                 >
-                  <img
-                    src="images/icons/Facebook.png"
-                    alt="facebook"
-                  >
-                </a>
+              </a>
 
-                <a
-                  class="footer__icons-link"
-                  target="_blank"
-                  href="https://www.instagram.com/"
+              <a
+                class="footer__icons-link"
+                target="_blank"
+                href="https://www.instagram.com/"
+              >
+                <img
+                  src="images/icons/instagram.png"
+                  alt="facebook"
                 >
-                  <img
-                    src="images/icons/instagram.png"
-                    alt="facebook"
-                  >
-                </a>
-              </div>
-            </div>
-
-            <div class="footer__columns">
-              <div class="footer__column">
-                <div class="footer__subtitle">
-                  Графік роботи
-                </div>
-                <div class="footer__calendar">
-                  <div class="footer__group">
-                    <h3 class="footer__time">12:00 — 20:00</h3>
-                    середа
-                    <h3 class="footer__time">12:00 — 20:00</h3>
-                    четвер
-                    <h3 class="footer__time">12:00 — 20:00</h3>
-                    п’ятниця
-                    <h3 class="footer__time">11:00 — 19:00</h3>
-                    субота
-                    <h3 class="footer__time">11:00 — 19:00</h3>
-                    неділя
-                  </div>
-
-                  <div class="footer__bottom-group">
-                    Вихідні понеділок, вівторок
-                    Каса припиняє роботу за 1 годину
-                    до закриття музею
-                  </div>
-                </div>
-              </div>
-
-              <div class="footer__column">
-                <div class="footer__subtitle">
-                  Контакти:
-                </div>
-                <div class="footer__calendar footer__calendar--second">
-                  вул. М. <br>
-                  Грушевського, 6; <br>
-                  Київ, 01001 <br>
-                  тел. +38 (044) <br>
-                  278-13-57 <br>
-                  факс +38 (044) <br>
-                  278-74-54 <br>
-                  e-mail: <br>
-                  info@namu.kiev.ua
-                </div>
-
-                <a href="#" class="footer__link">
-                  <div class="footer__arrow">
-                  </div>
-                </a>
-
-              </div>
-            </div>
-
-            <div class="footer__pages">
-              <div class="footer__pages-first">
-                <a href="#">Галерея</a>
-                <a href="#">Виставки та події</a>
-              </div>
-
-              <div class="footer__pages-second">
-                <a href="#">Про Нас</a>
-                <a href="#">Контакти</a>
-              </div>
-            </div>
-
-            <div class="footer__bottom">
-              <h4 class="footer__copy">Designed by Zhyriada Marina</h4>
-              <h4 class="footer__copy">Copyright © 2019. All Rights Reserved.</h4>
+              </a>
             </div>
           </div>
+
+          <div class="footer__columns">
+            <div class="footer__column">
+              <div class="footer__subtitle">
+                Графік роботи
+              </div>
+              <div class="footer__calendar">
+                <div class="footer__group">
+                  <h3 class="footer__time">12:00 — 20:00</h3>
+                    середа
+                  <h3 class="footer__time">12:00 — 20:00</h3>
+                    четвер
+                  <h3 class="footer__time">12:00 — 20:00</h3>
+                    п’ятниця
+                  <h3 class="footer__time">11:00 — 19:00</h3>
+                    субота
+                  <h3 class="footer__time">11:00 — 19:00</h3>
+                    неділя
+                </div>
+
+                <div class="footer__bottom-group">
+                  Вихідні понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+            </div>
+
+            <div class="footer__column">
+              <div class="footer__subtitle">
+                Контакти:
+              </div>
+              <div class="footer__calendar footer__calendar--second">
+                вул. М. <br>
+                Грушевського, 6; <br>
+                Київ, 01001 <br>
+                тел. +38 (044) <br>
+                278-13-57 <br>
+                факс +38 (044) <br>
+                278-74-54 <br>
+                e-mail: <br>
+                info@namu.kiev.ua
+              </div>
+
+              <a href="#" class="footer__link">
+                <div class="footer__arrow">
+                </div>
+              </a>
+
+            </div>
+          </div>
+
+          <div class="footer__pages">
+            <div class="footer__pages-first">
+              <a href="#">Галерея</a>
+              <a href="#">Виставки та події</a>
+            </div>
+
+            <div class="footer__pages-second">
+              <a href="#">Про Нас</a>
+              <a href="#">Контакти</a>
+            </div>
+          </div>
+
+          <div class="footer__bottom">
+            <h4 class="footer__copy">Designed by Zhyriada Marina</h4>
+            <h4 class="footer__copy">Copyright © 2019. All Rights Reserved.</h4>
+          </div>
+        </div>
       </div>
     </footer>
 
