--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" href="images/icons/museum.png">
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
@@ -18,7 +19,7 @@
     <header class="header">
       <div class="header__bg">
         <div class="header__row">
-          <a class="header__menu menu-phone menu">
+          <a class="header__menu menu-phone menu-cursor" href="##menu">
             <img
               class="header__menu-icon"
               src="images/icons/menu.png"
@@ -34,7 +35,7 @@
       <div class="container">
         <div class="header__body">
 
-          <a class="header__menu menu-desktop menu">
+          <a class="header__menu menu-desktop menu-cursor" href="##menu">
             <img
               class="header__menu-icon"
               src="images/icons/menu.png"
@@ -54,6 +55,41 @@
         </div>
       </div>
     </header>
+
+    <nav class="menu page__menu" id="#menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="menu__close"></a>
+            <a href="#" class="menu__logo">
+              <img
+                class="logo__img"
+                src="images/icons/museum.png"
+                alt="Miami Condo Kings"
+              >
+            </a>
+           </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="##events" class="menu__link">Актуальні події</a>
+            </li>
+            <li class="menu__item">
+              <a href="##gallery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="##subscribe" class="menu__link">Квитки</a>
+            </li>
+            <li class="menu__item">
+              <a href="##footer" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <section class="events" id="#events">
       <div class="container">
@@ -199,10 +235,14 @@
               name="email"
               id="email"
               class="subscribe__email"
+              required
               placeholder="E-mail"
               type="email">
 
-            <a href="#" class="subscribe__btn"></a>
+              <button type="submit" class="subscribe__btn-wrp">
+                <a href="#" class="subscribe__btn">
+                </a>
+              </button>
           </form>
         </div>
       </div>
@@ -212,7 +252,9 @@
       <div class="container">
         <div class="footer__body">
           <div class="footer__top-row">
-            <h3 class="footer__title">NA<br>MU</h3>
+            <a class="header__logo footer__title" href="#">
+              NA<br>MU
+            </a>
             <div class="footer__icons">
               <a
                 class="footer__icons-link"
@@ -220,6 +262,7 @@
                 href="https://www.facebook.com/"
               >
                 <img
+                  class="footer__icons-img"
                   src="images/icons/Facebook.png"
                   alt="facebook"
                 >
@@ -231,8 +274,9 @@
                 href="https://www.instagram.com/"
               >
                 <img
+                  class="footer__icons-img"
                   src="images/icons/instagram.png"
-                  alt="facebook"
+                  alt="instagram"
                 >
               </a>
             </div>
@@ -270,15 +314,27 @@
                 Контакти:
               </div>
               <div class="footer__calendar footer__calendar--second">
-                вул. М. <br>
-                Грушевського, 6; <br>
-                Київ, 01001 <br>
-                тел. +38 (044) <br>
-                278-13-57 <br>
-                факс +38 (044) <br>
-                278-74-54 <br>
-                e-mail: <br>
-                info@namu.kiev.ua
+                <a
+                  class="footer__links"
+                  target="_blank"
+                  href="https://goo.gl/maps/6PguUHG5RmEA84zf8"
+                >
+                  вул. М. <br>
+                  Грушевського, 6; <br>
+                  Київ, 01001 <br>
+                </a>
+                <a class="footer__links" href="tel:380442781357">
+                  тел. +38 (044) <br>
+                  278-13-57 <br>
+                </a>
+                <a class="footer__links" href="tel:380442787454">
+                  факс +38 (044) <br>
+                  278-74-54 <br>
+                </a>
+                <a class="footer__links" href="mailto:info@namu.kiev.ua">
+                  e-mail: <br>
+                  info@namu.kiev.ua
+                </a>
               </div>
 
               <a href="#" class="footer__link">
