--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,262 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>| NAMU</title>
+    <link rel="icon" type="image/x-icon" href="images/NA MU.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__header">
+
+      <div class="container">
+        <div class="header__background"></div>
+        <div class="header__content">
+          <div class="top-action">
+            <div class="grid">
+              <div class="grid__item grid__item--tablet-1-2 grid__item--desktop-1-2">
+                <a href="#menu" class="icon icon--menu">
+                  <img src="images/menu.svg" alt="Menu">
+                </a>
+              </div>
+              <div class="grid__item grid__item--tablet-4-5 grid__item--desktop-6-7">
+                <a href="#" class="logo">
+                  <img src="./images/NA MU.svg" alt="NAMU logo" class="logo__img">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid--phone">
+            <div class="grid__item grid__item--tablet-1-3 grid__item--desktop-1-5">
+              <h1 class="header__title">Художній музей</h1>
+            </div>
+            <div class="grid__item grid__item--tablet-1-3 grid__item--desktop-3-5">
+              <a href="#events" class="button header__button">Квитки </a>
+            </div>
+          </div>
+          <a href="#events" class="header__link featured-text featured-text--link">Події</a>
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__header">
+            <a href="#" class="logo">
+              <img src="./images/NA MU.svg" alt="NAMU logo" class="logo__img">
+            </a>
+            <a href="#" class="icon icon--cross">
+              <img src="./images/close.svg" alt="close" class="menu__img">
+            </a>
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Виставки та події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#about-us" class="menu__link">Про нас</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="events page__events" id="events">
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+
+          <div class="grid grid--phone events__exhibition">
+            <div class="grid__item grid__item--events grid__item--tablet-1-6 grid__item--desktop-1-7">
+              <div class="events__img-container">
+                <img src="./images/events/return.png" alt="return img" class="events__img">
+              </div>
+            </div>
+            <div class="grid--events grid__item grid__item--tablet-1-4 grid__item--desktop-9-12">
+              <div class="events__content">
+                <h3 class="events__type featured-text">Виставка
+                  <span class="events__date featured-text--green">26.08-29.11.2019</span>
+                </h3>
+                <h3 class="events__subtitle">Йду і повертаюсь</h3>
+                <p class="events__info">Національний Художній Музей України презентує унікальну частину колекції
+                  Градобанку
+                  - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid grid--phone events__exhibition">
+            <div class="grid__item grid__item--tablet-1-6 grid__item--desktop-1-7">
+              <div class="events__img-container">
+                <img src="./images/events/dreams.png" alt="dreams img" class="events__img">
+              </div>
+            </div>
+            <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-9-12">
+              <div class="events__content">
+                <h3 class="events__type featured-text">Виставка
+                  <span class="events__date featured-text--green">26.08-29.11.2019</span>
+                </h3>
+                <h3 class="events__subtitle">І спогади і мрії</h3>
+                <p class="events__info">Національний художній музей України до 100 річчя від дня народження видатної
+                  української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__lecture page__lecture">
+          <div class="events__lecture-container">
+            <div class="events__lecture-content">
+              <h3 class="events__lecture-type featured-text">Лекція
+                <span class="events__lecture-date featured-text--green">26/08/2019 - 11:00</span>
+              </h3>
+              <h3 class="events__lecture-name">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery page__gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="grid grid--gallery">
+            <div class="grid__item grid__item--tablet-1-3 grid__item--desktop-1-4">
+              <div class="gallery__photo-container">
+                <img src="images/gallery/1.png" alt="photo 1" class="gallery__img">
+              </div>
+            </div>
+            <div class="grid__item grid__item--tablet-4-6 grid__item--desktop-5-12">
+              <div class="gallery__photo-container gallery__photo-container--upper">
+                <img src="images/gallery/2.png" alt="photo 2" class="gallery__img">
+              </div>
+            </div>
+            <div class="grid__item  grid__item--desktop-1-8">
+              <div class="gallery__photo-container gallery__photo-container--lower">
+                <img src="images/gallery/3.png" alt="photo 3" class="gallery__img">
+              </div>
+            </div>
+            <div class="grid__item grid__item--desktop-9-12">
+              <div class="gallery__photo-container gallery__photo-container--lower">
+                <img src="images/gallery/4.png" alt="photo 4" class="gallery__img">
+              </div>
+            </div>
+          </div>
+          <div class="gallery__pagination pagination">
+            <div class="pagination__point pagination__point--active"></div>
+            <div class="pagination__point"></div>
+            <div class="pagination__point"></div>
+            <div class="pagination__point"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription page__subscription" id="about-us">
+        <div class="container">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form action="#" method="get" class="subscription__form">
+            <label for="email" class="subscription__email-label">
+              <input type="email" name="email" id="email" placeholder="E-mail" class="subscription__email" required>
+            </label>
+            <button class="subscription__button" type="submit">
+              <img src="images/subscription/arrow-btn.svg" alt="arrow-btn" class="subscription__btn-img">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer page__footer" id="contacts">
+      <div class="container">
+        <div class="grid footer__block"> 
+          <div class="footer__top">
+            <a href="#" class="footer__logo">
+              <img src="./images/NA MU.svg" alt="NAMU logo" class="logo__img">
+            </a>
+            <div class="footer__social">
+              <a href="https://www.facebook.com/" class="footer__icon">
+                <img src="images/Facebook.svg" alt="facebook">
+              </a>
+              <a href="https://www.instagram.com/" class="footer__icon">
+                <img src="images/instagram.svg" alt="instagram">
+              </a>
+            </div>
+          </div>
+
+            <div class="footer__hours grid__item--tablet-2-3 grid__item--desktop-3-4">
+              <h3 class="footer__title">Графік роботи</h3>
+              <p class="footer__schedule">
+                <span class="footer__span">12:00— 20:00</span> середа<br>
+                <span class="footer__span">12:00— 20:00</span> четвер<br>
+                <span class="footer__span">12:00 — 20:00</span> п’ятниця<br>
+                <span class="footer__span">11:00 — 19:00</span> субота<br>
+                <span class="footer__span">11:00 — 19:00</span> неділя
+                <br>
+                <br>
+                <span class="footer__span">Вихідні:</span>понеділок, вівторок<br>Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+            <div class="footer__contact grid__item grid__item--tablet-4-5 grid__item--desktop-5-6">
+              <h3 class="footer__title">Контакти:</h3>
+              <p class="footer__schedule">
+                вул. М. Грушевського, 6;<br>Київ, 01001
+                <br>тел. +38 (044) 278-13-57
+                <br>факс +38 (044) 278-74-54
+                <br>e-mail: info@namu.kiev.ua</p>
+            </div>
+            <div class="footer__line grid__item grid__item--tablet-4-5 grid__item--desktop-7-7"></div>
+            <nav class="nav grid__item grid__item--tablet-2-3 grid__item--desktop-8-9">
+              <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#events" class="nav__link">
+                      Виставки та події
+                    </a>
+                  </li>
+                </ul>
+                </nav>
+                <nav class="nav grid__item grid__item--tablet-4-5 grid__item--desktop-10-11">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#about-us" class="nav__link">
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contacts" class="nav__link">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+            </nav>
+          </div>
+            <div class="footer__rights">
+              <p class="footer__right">Designed by Zhyriada Marina</p>
+              <p class="footer__right">Copyright © 2019. All Rights Reserved.</p>
+            </div>
+        </div>
+      
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
