--- a/src/index.html
+++ b/src/index.html
@@ -333,20 +333,20 @@
             <p class="footer__title">Контакти:</p>
             <a 
               href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5285706,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593"
-              class="footer__text"
+              class="footer__text footer__link"
               target="_blank"
             >вул. М. Грушевського, 6; Київ, 01001</a>
             <a 
               href="tel:+38 (044) 278-13-57"
-              class="footer__text"
+              class="footer__text footer__link"
             ><br>тел. +38 (044) 278-13-57</a>
             <a 
               href="fax:+38 (044) 278-74-54"
-              class="footer__text"
+              class="footer__text footer__link"
             ><br>факс +38 (044) 278-74-54</a>
             <a 
               href="mailto: e-mail: info@namu.kiev.ua"
-              class="footer__text"
+              class="footer__text footer__link"
             ><br>e-mail: info@namu.kiev.ua</a>
           </div>
 
@@ -367,9 +367,15 @@
             grid__item--tablet-2-3
             grid__item--desktop-8-9"
           >
-            <a href="#gallery" class="footer__text">Галерея<br></a>
+            <a
+              href="#gallery" 
+              class="footer__text footer__link"
+            >Галерея<br></a>
 
-            <a href="#current-events" class="footer__text">Виставки та події<br></a>
+            <a
+              href="#current-events"
+              class="footer__text footer__link"
+            >Виставки та події<br></a>
           </div>
 
           <div class="
@@ -378,8 +384,14 @@
             grid__item--tablet-4-4
             grid__item--desktop-10-10"
           >
-            <a href="#contacts" class="footer__text">Про нас<br></a>
-            <a href="#contacts" class="footer__text">Контакти<br></a>
+            <a
+              href="#contacts" 
+              class="footer__text footer__link"
+            >Про нас<br></a>
+            <a
+              href="#contacts"
+              class="footer__text footer__link"
+            >Контакти<br></a>
           </div>
 
         </div>
